Fixed the 2 pixel gap on the arrow for the new slideshow.

--- a/sass/partials/_athletics.scss
+++ b/sass/partials/_athletics.scss
@@ -330,7 +330,7 @@
       display: none;
       @include bp(wide-screens) {
         top: 11px;
-        right: 4px;
+        right: 2px;
         display: block;
       }
     }
